WebKit Bugzilla
New
Browse
Search+
Log In
×
Sign in with GitHub
or
Remember my login
Create Account
·
Forgot Password
Forgotten password account recovery
RESOLVED FIXED
170612
WebAssembly: Module::getOrCreateCodeBlock is wrong
https://bugs.webkit.org/show_bug.cgi?id=170612
Summary
WebAssembly: Module::getOrCreateCodeBlock is wrong
Saam Barati
Reported
2017-04-07 12:07:49 PDT
It needs to check something that isn't runnable()
Attachments
patch
(2.69 KB, patch)
2017-04-07 12:14 PDT
,
Saam Barati
no flags
Details
Formatted Diff
Diff
patch
(1.74 KB, patch)
2017-04-07 12:33 PDT
,
Saam Barati
keith_miller
: review+
Details
Formatted Diff
Diff
Show Obsolete
(1)
View All
Add attachment
proposed patch, testcase, etc.
Saam Barati
Comment 1
2017-04-07 12:14:09 PDT
Created
attachment 306526
[details]
patch
JF Bastien
Comment 2
2017-04-07 12:20:21 PDT
Comment on
attachment 306526
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=306526&action=review
> Source/JavaScriptCore/wasm/WasmCodeBlock.h:65 > + return false;
"don't know" shouldn't be false? Can you use an optional instead?
Keith Miller
Comment 3
2017-04-07 12:21:30 PDT
Comment on
attachment 306526
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=306526&action=review
>> Source/JavaScriptCore/wasm/WasmCodeBlock.h:65 >> + return false; > > "don't know" shouldn't be false? Can you use an optional instead?
I think we should just use a TriState.
Saam Barati
Comment 4
2017-04-07 12:24:38 PDT
Comment on
attachment 306526
[details]
patch View in context:
https://bugs.webkit.org/attachment.cgi?id=306526&action=review
>>> Source/JavaScriptCore/wasm/WasmCodeBlock.h:65 >>> + return false; >> >> "don't know" shouldn't be false? Can you use an optional instead? > > I think we should just use a TriState.
Maybe I'll just make the caller do this. Since we just have one caller. if (!codeBlock || (codeBlock->compilationFinished() && !codeBlock->runnable())
Saam Barati
Comment 5
2017-04-07 12:33:19 PDT
Created
attachment 306527
[details]
patch
Keith Miller
Comment 6
2017-04-07 12:36:07 PDT
Comment on
attachment 306527
[details]
patch r=me.
Saam Barati
Comment 7
2017-04-07 12:43:16 PDT
landed in:
https://trac.webkit.org/changeset/215114/webkit
Note
You need to
log in
before you can comment on or make changes to this bug.
Top of Page
Format For Printing
XML
Clone This Bug