WebAssembly: Module::getOrCreateCodeBlock is wrong https://bugs.webkit.org/show_bug.cgi?id=170612

Reviewed by Keith Miller.

When we were getting a module's CodeBlock, we were checking if !runnable(),
and if !runnable(), we were re-creating the CodeBlock. This is wrong, since
!runnable() is true while the CodeBlock is compiling. Instead, we should check
if we've finished compiling, and if so, if that compilation failed.

* wasm/WasmModule.cpp:
(JSC::Wasm::Module::getOrCreateCodeBlock):



Canonical link: https://commits.webkit.org/187542@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@215114 268f45cc-cd09-0410-ab3c-d52691b4dbfc